--- a/amplify.yml
+++ b/amplify.yml
@@ -47,50 +47,39 @@ frontend:
         - cat .env.production || echo "No .env.production file created"
         - echo "=== BUILDING NEXT.JS APPLICATION ==="
         - npm run build
-        - echo "=== ULTRA-SELECTIVE DEPLOYMENT ==="
-        - echo "Creating minimal deployment with only essential files..."
+        - echo "=== AMPLIFY-COMPATIBLE DEPLOYMENT ==="
+        - echo "Creating deployment structure that matches Amplify expectations..."
         - rm -rf ./deploy
-        - mkdir -p ./deploy/.next
-        - echo "Copying essential Next.js manifest files to deployment root..."
-        - cp .next/required-server-files.json ./deploy/
-        - cp .next/BUILD_ID ./deploy/
-        - cp .next/prerender-manifest.json ./deploy/ 2>/dev/null || echo "No prerender-manifest"
-        - cp .next/routes-manifest.json ./deploy/ 2>/dev/null || echo "No routes-manifest"
-        - cp .next/build-manifest.json ./deploy/ 2>/dev/null || echo "No build-manifest"
-        - echo "Copying essential .next runtime directories..."
-        - cp -r .next/server ./deploy/.next/
-        - cp -r .next/static ./deploy/.next/
-        - echo "Copying essential .next files..."
-        - cp .next/BUILD_ID ./deploy/.next/
-        - cp .next/*.json ./deploy/.next/ 2>/dev/null || echo "No JSON files"
-        - echo "Ensuring trace files are included..."
-        - find .next -name "*.nft.json" | wc -l | xargs echo "Original trace files count:"
-        - find ./deploy -name "*.nft.json" | wc -l | xargs echo "Copied trace files count:"
-        - echo "Copying any missing trace files..."
-        - find .next -name "*.nft.json" -exec cp --parents {} ./deploy/ \; 2>/dev/null || echo "Trace files already copied"
+        - mkdir -p ./deploy
+        - echo "Copying complete .next directory..."
+        - cp -r .next ./deploy/
         - echo "Copying public assets..."
         - cp -r public ./deploy/ 2>/dev/null || echo "No public directory"
-        - echo "Creating minimal package.json..."
+        - echo "Creating package.json..."
         - echo '{"name":"nailit","type":"module"}' > ./deploy/package.json
-        - echo "=== AGGRESSIVE CLEANUP ==="
-        - echo "Removing all unnecessary files from deployment..."
-        - find ./deploy -name "*.map" -delete 2>/dev/null || echo "No source maps"
-        - find ./deploy -name "*.txt" -delete 2>/dev/null || echo "No txt files"
-        - find ./deploy -name "cache" -type d -exec rm -rf {} + 2>/dev/null || echo "No cache dirs"
-        - find ./deploy -name "trace" -type d -exec rm -rf {} + 2>/dev/null || echo "No trace dirs"
+        - echo "Updating required-server-files.json appDir to be relative..."
+        - node -e "
+          const fs = require('fs');
+          const path = './deploy/.next/required-server-files.json';
+          const config = JSON.parse(fs.readFileSync(path, 'utf8'));
+          config.appDir = process.env.PWD + '/deploy';
+          fs.writeFileSync(path, JSON.stringify(config, null, 2));
+          console.log('Updated appDir to:', config.appDir);
+        "
+        - echo "=== AGGRESSIVE CLEANUP (preserving essential files) ==="
+        - echo "Removing source maps and cache while preserving trace files..."
+        - find ./deploy/.next -name "*.map" -delete 2>/dev/null || echo "No source maps"
+        - find ./deploy/.next -name "cache" -type d -exec rm -rf {} + 2>/dev/null || echo "No cache dirs"
+        - rm -rf ./deploy/.next/cache 2>/dev/null || echo "No .next/cache"
         - echo "=== FINAL VERIFICATION ==="
         - echo "Deployment structure:"
         - ls -la ./deploy
-        - echo "Essential files check:"
-        - ls -la ./deploy/required-server-files.json || echo "⚠️ required-server-files.json missing"
-        - ls -la ./deploy/BUILD_ID || echo "⚠️ BUILD_ID missing"
-        - echo "Server files check:"
-        - ls -la ./deploy/.next/server/ | head -5 || echo "⚠️ server files missing"
-        - echo "Static files check:"
-        - ls -la ./deploy/.next/static/ | head -5 || echo "⚠️ static files missing"
-        - echo "Final trace files verification:"
-        - find ./deploy -name "*.nft.json" | wc -l | xargs echo "Final trace files count:"
-        - find ./deploy -name "*.nft.json" | head -5 || echo "No trace files found"
+        - echo "Essential Next.js files:"
+        - ls -la ./deploy/.next/ | head -10
+        - echo "Trace files verification:"
+        - find ./deploy -name "*.nft.json" | wc -l | xargs echo "Total trace files:"
+        - echo "Required server files check:"
+        - head -5 ./deploy/.next/required-server-files.json
         - echo "Total deployment size:"
         - du -sh ./deploy
         - echo "Size breakdown:"
