--- a/amplify.yml
+++ b/amplify.yml
@@ -58,14 +58,7 @@ frontend:
         - echo "Creating package.json..."
         - echo '{"name":"nailit","type":"module"}' > ./deploy/package.json
         - echo "Updating required-server-files.json appDir to be relative..."
-        - node -e "
-          const fs = require('fs');
-          const path = './deploy/.next/required-server-files.json';
-          const config = JSON.parse(fs.readFileSync(path, 'utf8'));
-          config.appDir = process.env.PWD + '/deploy';
-          fs.writeFileSync(path, JSON.stringify(config, null, 2));
-          console.log('Updated appDir to:', config.appDir);
-        "
+        - node -e "const fs = require('fs'); const path = './deploy/.next/required-server-files.json'; const config = JSON.parse(fs.readFileSync(path, 'utf8')); config.appDir = process.env.PWD + '/deploy'; fs.writeFileSync(path, JSON.stringify(config, null, 2)); console.log('Updated appDir to:', config.appDir);"
         - echo "=== AGGRESSIVE CLEANUP (preserving essential files) ==="
         - echo "Removing source maps and cache while preserving trace files..."
         - find ./deploy/.next -name "*.map" -delete 2>/dev/null || echo "No source maps"
