fix: preserve trace files during standalone directory cleanup
- Add analysis of trace file distribution before cleanup
- Backup trace files from standalone directory before removal
- Restore backed up trace files to server directory
- Add detailed verification to track trace file counts
- This should preserve all 88 trace files while still removing standalone bulk

--- a/amplify.yml
+++ b/amplify.yml
@@ -61,19 +61,34 @@ frontend:
         - cp ./deploy/.next/required-server-files.json ./deploy/
         - echo "Updating required-server-files.json appDir to be relative..."
         - node -e "const fs = require('fs'); const path = './deploy/required-server-files.json'; const config = JSON.parse(fs.readFileSync(path, 'utf8')); config.appDir = process.env.PWD + '/deploy'; fs.writeFileSync(path, JSON.stringify(config, null, 2)); console.log('Updated appDir to:', config.appDir);"
-        - echo "=== AGGRESSIVE CLEANUP (preserving essential files) ==="
-        - echo "Removing source maps, cache, and standalone directory while preserving trace files..."
+        - echo "=== TRACE FILES ANALYSIS ==="
+        - echo "Analyzing trace file distribution before cleanup..."
+        - find ./deploy -name "*.nft.json" | wc -l | xargs echo "Total trace files before cleanup:"
+        - echo "Trace files in server directory:"
+        - find ./deploy/.next/server -name "*.nft.json" | wc -l || echo "0"
+        - echo "Trace files in standalone directory:"
+        - find ./deploy/.next/standalone -name "*.nft.json" 2>/dev/null | wc -l || echo "0"
+        - echo "=== SELECTIVE CLEANUP (preserving trace files) ==="
+        - echo "Extracting any trace files from standalone before removal..."
+        - mkdir -p ./deploy/.next/server-backup 2>/dev/null || echo "Backup dir exists"
+        - find ./deploy/.next/standalone -name "*.nft.json" -exec cp {} ./deploy/.next/server-backup/ \; 2>/dev/null || echo "No standalone trace files to backup"
+        - echo "Removing source maps, cache, and standalone directory..."
         - find ./deploy/.next -name "*.map" -delete 2>/dev/null || echo "No source maps"
         - find ./deploy/.next -name "cache" -type d -exec rm -rf {} + 2>/dev/null || echo "No cache dirs"
         - rm -rf ./deploy/.next/cache 2>/dev/null || echo "No .next/cache"
         - rm -rf ./deploy/.next/standalone 2>/dev/null || echo "No standalone directory"
+        - echo "Restoring any backed up trace files..."
+        - find ./deploy/.next/server-backup -name "*.nft.json" -exec cp {} ./deploy/.next/server/ \; 2>/dev/null || echo "No trace files to restore"
+        - rm -rf ./deploy/.next/server-backup 2>/dev/null || echo "No backup to clean"
         - echo "=== FINAL VERIFICATION ==="
         - echo "Deployment structure:"
         - ls -la ./deploy
         - echo "Essential Next.js files:"
         - ls -la ./deploy/.next/ | head -10
         - echo "Trace files verification:"
-        - find ./deploy -name "*.nft.json" | wc -l | xargs echo "Total trace files:"
+        - find ./deploy -name "*.nft.json" | wc -l | xargs echo "Total trace files after cleanup:"
+        - echo "Sample trace files:"
+        - find ./deploy -name "*.nft.json" | head -5 || echo "No trace files found"
         - echo "Required server files check (root):"
         - ls -la ./deploy/required-server-files.json || echo "⚠️ required-server-files.json missing from root"
         - echo "Required server files check (.next):"
