--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -6,13 +6,13 @@ build:
       - echo "=== App Runner Build Process Starting ==="
       - echo "Node version:" && node --version
       - echo "NPM version:" && npm --version
-      - echo "=== Installing dependencies ==="
-      - npm ci --legacy-peer-deps
       - echo "=== Setting up build environment ==="
       - export DATABASE_URL="postgresql://dummy:dummy@localhost:5432/dummy"
       - export NEXTAUTH_SECRET="dummy-secret-for-build"
       - export NEXTAUTH_URL="http://localhost:3000"
-      - echo "=== Running Prisma generate ==="
+      - echo "=== Installing dependencies (without postinstall) ==="
+      - npm ci --ignore-scripts --legacy-peer-deps
+      - echo "=== Running Prisma generate manually ==="
       - npx prisma generate
       - echo "=== Building Next.js application ==="
       - npm run build
