--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -11,7 +11,7 @@ build:
       - echo "=== Build completed successfully ==="
 run:
   runtime-version: nodejs22
-  command: node -e "const http = require('http'); const server = http.createServer((req, res) => { res.writeHead(200, {'Content-Type': 'application/json'}); res.end(JSON.stringify({message: 'NailIt App is running on App Runner!', status: 'ok', timestamp: new Date().toISOString()})); }); server.listen(3000, () => console.log('Server running on port 3000'));"
+  command: node start-simple.js
   network:
     port: 3000
   env:
