fix: Use --legacy-peer-deps to resolve Next.js peer dependency conflicts
The build was failing with:
- next-auth@4.24.11 peer dependency conflict with next@15.4.0-canary.51
- npm install --production doesn't accept --legacy-peer-deps flag

Solution:
- Use npm install --legacy-peer-deps instead of --production
- This resolves the Next.js and next-auth version compatibility issue
- Build logs showed exact error: 'ERESOLVE could not resolve' for next-auth

--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -6,8 +6,8 @@ build:
       - echo "=== App Runner Build Process Starting ==="
       - echo "Node version:" && node --version
       - echo "NPM version:" && npm --version
-      - echo "=== Installing only production dependencies ==="
-      - npm install --production
+      - echo "=== Installing dependencies with legacy peer deps ==="
+      - npm install --legacy-peer-deps
       - echo "=== Build completed successfully ==="
 run:
   runtime-version: nodejs22
