--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,10 +7,6 @@ build:
       - echo "Node version:" && node --version
       - echo "NPM version:" && npm --version
       - echo "=== Setting up build environment ==="
-      - export DATABASE_URL="postgresql://dummy:dummy@localhost:5432/dummy"
-      - export NEXTAUTH_SECRET="dummy-secret-for-build"
-      - export NEXTAUTH_URL="http://localhost:3000"
-      - export NODE_ENV="production"
       - echo "Environment variables set"
       - echo "=== Installing dependencies (without postinstall) ==="
       - npm ci --ignore-scripts --legacy-peer-deps
@@ -19,7 +15,7 @@ build:
       - npx prisma generate
       - echo "Prisma client generated successfully"
       - echo "=== Building Next.js application ==="
-      - npm run build
+      - DATABASE_URL="postgresql://dummy:dummy@localhost:5432/dummy" NEXTAUTH_SECRET="dummy-secret-for-build" NEXTAUTH_URL="http://localhost:3000" NODE_ENV="production" npm run build
       - echo "=== Build completed successfully ==="
       - echo "Built files:" && ls -la .next/
 run:
