Re-enable secure secrets integration with correct NEXTAUTH_URL
- Updated NEXTAUTH_URL in Secrets Manager to point to new App Runner service
- Restored secrets-based apprunner.yaml configuration
- Re-enabled secrets integration in CDK stack
- Ready to deploy secure credential management

--- a/apprunner-with-secrets.yaml
+++ b/apprunner-with-secrets.yaml
@@ -6,18 +6,13 @@ build:
       - echo "=== App Runner Build Process Starting ==="
       - echo "Node version:" && node --version
       - echo "NPM version:" && npm --version
-      - echo "=== Setting up build environment ==="
-      - echo "Environment variables set"
       - echo "=== Installing dependencies (without postinstall) ==="
       - npm ci --ignore-scripts --legacy-peer-deps
-      - echo "Dependencies installed successfully"
       - echo "=== Running Prisma generate manually ==="
       - npx prisma generate
-      - echo "Prisma client generated successfully"
-      - echo "=== Building Next.js application ==="
+      - echo "=== Building Next.js application with dummy env vars ==="
       - DATABASE_URL="postgresql://dummy:dummy@localhost:5432/dummy" NEXTAUTH_SECRET="dummy-secret-for-build" NEXTAUTH_URL="http://localhost:3000" NODE_ENV="production" npm run build
       - echo "=== Build completed successfully ==="
-      - echo "Built files:" && ls -la .next/
 run:
   runtime-version: nodejs22
   command: npm start
