Add email ingestion infrastructure and testing utilities
- Add Gmail processor for email ingestion and team member filtering
- Add comprehensive email testing fixtures and BDD scenarios
- Add email testing documentation and strategy guides
- Update infrastructure with latest environment variable configurations
- Remove sensitive credentials from documentation

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,10 @@ yarn-error.log*why
 .env*
 .githubauth
 
+# Gmail OAuth credentials and tokens (email testing utility)
+gmail-contractor-credentials.json
+gmail-contractor-tokens.json
+
 # vercel
 .vercel
 
