--- a/package.json
+++ b/package.json
@@ -27,6 +27,14 @@
     "test:feature:projects": "jest tests/features/projects --passWithNoTests",
     "test:feature:api": "jest tests/features/api --passWithNoTests",
     "test:feature:components": "jest tests/features/components --passWithNoTests",
+    "test:email:setup": "tsx tests/integration/run-email-tests.ts",
+    "test:email:db": "tsx tests/integration/run-email-tests.ts db",
+    "test:email:real": "tsx tests/integration/run-email-tests.ts real",
+    "test:email:both": "tsx tests/integration/run-email-tests.ts both",
+    "test:email:cleanup": "tsx -e \"import { cleanupTestData } from './tests/integration/email-test-setup'; cleanupTestData()\"",
+    "test:gmail:setup": "tsx scripts/gmail-oauth-setup.ts",
+    "test:gmail:token": "tsx scripts/gmail-token-exchange.ts",
+    "test:gmail:auth": "tsx scripts/test-gmail-auth.ts",
     "lint:check": "next lint --max-warnings 0",
     "lint:ci": "next lint --max-warnings 20",
     "type-check": "tsc --noEmit",
@@ -43,6 +51,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
     "@aws-sdk/client-cloudwatch-logs": "^3.821.0",
+    "@aws-sdk/client-s3": "^3.821.0",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^6.8.2",
     "@supabase/supabase-js": "^2.39.0",
@@ -50,9 +59,11 @@
     "@types/uuid": "^10.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
+    "googleapis": "^144.0.0",
     "next": "15.4.0-canary.51",
     "next-auth": "^4.24.11",
     "next-swagger-doc": "^0.4.1",
+    "nodemailer": "^6.9.16",
     "pg": "^8.16.0",
     "prisma": "^6.8.2",
     "react": "19.1.0",
@@ -73,9 +84,11 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.4.7",
     "eslint": "^9",
     "eslint-config-next": "15.4.0-canary.51",
     "jest": "^29.7.0",
