feat: implement Docker-based deployment migration
- Add ECR stack for Docker image repositories
- Update App Runner stack with dual mode support (source/docker)
- Create GitHub Actions workflow for automated Docker builds
- Add deployment scripts for easy environment management
- Update Dockerfile with proper NEXT_PUBLIC environment variable handling
- Create comprehensive migration documentation
- Maintain backward compatibility with source code deployment

This resolves the NEXT_PUBLIC_GOOGLE_MAPS_API_KEY embedding issue by ensuring
environment variables are available during the Docker build process.

Fixes: Environment variable not embedded in client bundle
Implements: Docker-based deployment with guaranteed build-time env vars

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -11,6 +11,12 @@
     "deploy:dev": "cdk deploy --context environment=development",
     "deploy:staging": "cdk deploy --context environment=staging", 
     "deploy:prod": "cdk deploy --context environment=production",
+    "deploy:docker:dev": "./scripts/deploy-docker.sh development",
+    "deploy:docker:staging": "./scripts/deploy-docker.sh staging",
+    "deploy:docker:prod": "./scripts/deploy-docker.sh production",
+    "deploy:source:dev": "./scripts/deploy-source.sh development",
+    "deploy:source:staging": "./scripts/deploy-source.sh staging",
+    "deploy:source:prod": "./scripts/deploy-source.sh production",
     "diff": "cdk diff",
     "synth": "cdk synth",
     "destroy": "cdk destroy"
