--- a/infrastructure/cdk.out/AppRunner-prod.template.json
+++ b/infrastructure/cdk.out/AppRunner-prod.template.json
@@ -22,6 +22,10 @@
       "Value": "Neon"
      },
      {
+      "Key": "DeploymentMode",
+      "Value": "source"
+     },
+     {
       "Key": "Environment",
       "Value": "production"
      },
@@ -111,7 +115,7 @@
      "CodeRepository": {
       "CodeConfiguration": {
        "CodeConfigurationValues": {
-        "BuildCommand": "npm ci --ignore-scripts --legacy-peer-deps && npx prisma generate && DATABASE_URL=\"postgresql://dummy:dummy@localhost:5432/dummy\" NEXTAUTH_SECRET=\"dummy-secret-for-build\" NEXTAUTH_URL=\"http://localhost:3000\" NODE_ENV=\"production\" npm run build",
+        "BuildCommand": "npm ci --ignore-scripts --legacy-peer-deps && npx prisma generate && echo \"=== DEBUG: Environment Variables During Build ===\" && node debug-env.js && echo \"=== DEBUG: About to run npm build with NEXT_PUBLIC vars ===\" && NEXT_PUBLIC_BUILD_TIME=$(date -u +\"%Y-%m-%dT%H:%M:%S.%3NZ\") NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=\"AIzaSyDCLRbf1Nf6NxV4PqO_92-q1wE1rCNOaw0\" DATABASE_URL=\"postgresql://dummy:dummy@localhost:5432/dummy\" NEXTAUTH_SECRET=\"dummy-secret-for-build\" NEXTAUTH_URL=\"http://localhost:3000\" NODE_ENV=\"production\" npm run build",
         "Runtime": "NODEJS_22",
         "RuntimeEnvironmentSecrets": [
          {
@@ -142,12 +146,6 @@
           "Name": "GOOGLE_CLIENT_SECRET",
           "Value": {
            "Fn::ImportValue": "Secrets-prod:ExportsOutputRefGoogleClientSecret7356BEB4E9294748"
-          }
-         },
-         {
-          "Name": "NEXT_PUBLIC_GOOGLE_MAPS_API_KEY",
-          "Value": {
-           "Fn::ImportValue": "Secrets-prod:ExportsOutputRefApiKeys3BB3983D8BCC0B1D"
           }
          }
         ],
@@ -195,6 +193,10 @@
      {
       "Key": "DatabaseProvider",
       "Value": "Neon"
+     },
+     {
+      "Key": "DeploymentMode",
+      "Value": "source"
      },
      {
       "Key": "Environment",
@@ -271,6 +273,13 @@
    },
    "Export": {
     "Name": "NailIt-prod-AppRunnerServiceId"
+   }
+  },
+  "DeploymentMode": {
+   "Description": "App Runner deployment mode (source or docker)",
+   "Value": "source",
+   "Export": {
+    "Name": "NailIt-prod-DeploymentMode"
    }
   }
  },
